--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -31,6 +31,8 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
           path: ~/.cargo/registry
       - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
