--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add data.jsonl
+          git add ./webapp/public/data.jsonl
           git commit -m "Update data.jsonl" || echo "No changes to commit"
 
       - name: Push changes
