--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -66,7 +66,7 @@ jobs:
       - name: pnpm run build
         run: |
           pnpm run build
-          sed -i 's|src="/assets|src="/moon_build/dashboard/assets|g' ./dist/index.html
+          sed -i '' 's|src="/assets|src="/moon_build_dashboard/assets|g' ./dist/index.html
         working-directory: ./webapp
 
       - name: Deploy to GitHub Pages
