--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -67,6 +67,7 @@ jobs:
         run: |
           pnpm run build
           sed -i '' 's|="/assets|="/moon_build_dashboard/assets|g' ./dist/index.html
+          sed -i '' 's|"/data.jsonl"|"/moon_build_dashboard/data.jsonl|g' ./dist/assets/*.js
         working-directory: ./webapp
 
       - name: Deploy to GitHub Pages
