--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -34,8 +34,14 @@ jobs:
         run: |
           curl -fsSLv https://cli.moonbitlang.com/install/unix.sh | bash -s
           echo "$HOME/.moon/bin" >> $GITHUB_PATH
+
       - name: Version
         run: moon version --all
+
+      - name: moon update
+        run: |
+          moon update
+
       - name: Build
         run: |
           cargo build --release
