--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: main
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 18 * * *' # 02:00 AM UTC+8
 
 env:
   CARGO_TERM_COLOR: always
