--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -51,8 +51,8 @@ jobs:
 
       - name: Commit
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add ./webapp/public/data.jsonl
           git commit -m "Update data.jsonl" || echo "No changes to commit"
 
