--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-argh = "0.1.12"
 chrono = "0.4.38"
+clap = { version = "4.5.16", features = ["derive"] }
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
 tempfile = "3.12.0"
