--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.5.16", features = ["derive"] }
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
 tempfile = "3.12.0"
+thiserror = "1.0.63"
