--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.86"
 chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive"] }
+colored = "2.1.0"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
 tempfile = "3.12.0"
