--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ anyhow = "1.0.86"
 chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive"] }
 colored = "2.1.0"
+home = "0.5.9"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
 tempfile = "3.12.0"
 thiserror = "1.0.63"
+walkdir = "2.5.0"
