--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.86"
 chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive"] }
 colored = "2.1.0"
+form_urlencoded = "1.2.1"
 home = "0.5.9"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
